--- a/src/assets/css/license.css
+++ b/src/assets/css/license.css
@@ -1,4 +1,4 @@
-.cx-button.button {
+.tan-button.button {
 	width: 200px;
 	height: 40px;
 	font-size: 18px;
@@ -8,10 +8,10 @@
 	font-weight: 300;
 	margin-top: 10px;
 }
-.cx-title {
+.tan-title {
 	margin: 10px 0 5px 0;
 }
-.cx-desc {
+.tan-desc {
 	font-size: 15px;
 	margin: 0 0 10px 0;
 }
