--- a/src/assets/css/survey.css
+++ b/src/assets/css/survey.css
@@ -1,15 +1,15 @@
-.notice.cx-notice.cx-survey {
+.notice.tan-notice.tan-survey {
     padding: 15px;
 }
-.notice .cx-survey-content h3 {
+.notice .tan-survey-content h3 {
     padding: 0;
     margin: 0;
     display: inline-block;
 }
-p.cx-survey-btn-wrapper {
+p.tan-survey-btn-wrapper {
     margin: 0;
 }
-.cx-survey-btn-wrapper .cx-survey-btn {
+.tan-survey-btn-wrapper .tan-survey-btn {
     display: inline-block;
     padding: 0.75em;
     background-color: #4c3f93;
@@ -17,14 +17,14 @@ p.cx-survey-btn-wrapper {
     border-color: #4c3f93;
     outline: 0;
 }
-.cx-survey-btn-wrapper .cx-survey-btn:hover {
+.tan-survey-btn-wrapper .tan-survey-btn:hover {
     background-color: #554d82;
 }
-.cx-survey-img {
+.tan-survey-img {
     float: left;
     height: 122px;
     margin-right: 20px;
 }
-.cx-notice.cx-survey .button {
+.tan-notice.tan-survey .button {
     margin-left: 0px;
 }
